home 1 done without responsive

--- a/index.html
+++ b/index.html
@@ -549,6 +549,130 @@
     </section>
     <!-- testimonial area end -->
 
+    <!-- award area start -->
+    <section class="award-area pb-120">
+        <div class="container">
+            <div class="section-top">
+                <div class="row">
+                    <div class="col-lg-5">
+                        <h2>Our <span>Award</span> & Recognitions</h2>
+                    </div>
+                    <div class="col-lg-6 offset-lg-1 align-self-end">
+                        <p>We are proud to be recognized for our excellence and innovation in the industry. Our awards
+                            and accolades reflect our commitment to delivering outstanding results and exceptional
+                            service to our clients.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-end">
+                <div class="col-lg-8 mt-60">
+                    <div class="award-tab">
+                        <ul>
+                            <li>
+                                <span>Awards</span>
+                                <span>Platform</span>
+                                <span>Year</span>
+                            </li>
+                            <li class="tab-link active" data-tab="tab-2">
+                                <span>Creative Excellence</span>
+                                <span>AdAge</span>
+                                <span>2023</span>
+                            </li>
+                            <li class="tab-link" data-tab="tab-3">
+                                <span>Digital Impact</span>
+                                <span>Campaign Magazine</span>
+                                <span>2022</span>
+                            </li>
+                            <li class="tab-link" data-tab="tab-4">
+                                <span>Innovation in Design</span>
+                                <span>Fast Company</span>
+                                <span>2020</span>
+                            </li>
+                            <li class="tab-link" data-tab="tab-5">
+                                <span>Global Marketing</span>
+                                <span>The Drum</span>
+                                <span>2023</span>
+                            </li>
+                            <li class="tab-link" data-tab="tab-6">
+                                <span>Brand Impact</span>
+                                <span>Computer Magazine</span>
+                                <span>2021</span>
+                            </li>
+                            <li class="tab-link" data-tab="tab-7">
+                                <span>Digital Creativity</span>
+                                <span>Digiday</span>
+                                <span>2022</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="award-content tab-content active" id="tab-2">
+                        <div class="award-img">
+                            <img src="assets/images/award-img-1.png" alt="award-img">
+                        </div>
+                        <div class="award-text">
+                            <h5 class="mb-10">Creative Excellence, 2023</h5>
+                            <p>Our groundbreaking campaign for UrbanBlend seamlessly combined digital, print, and
+                                experiential marketing, earning us top honors in this highly </p>
+                        </div>
+                    </div>
+                    <div class="award-content tab-content" id="tab-3">
+                        <div class="award-img">
+                            <img src="assets/images/award-img-2.png" alt="award-img">
+                        </div>
+                        <div class="award-text">
+                            <h5>Digital Impact, 2022</h5>
+                            <p>Our groundbreaking campaign for UrbanBlend seamlessly combined digital, print, and
+                                experiential marketing, earning us top honors in this highly </p>
+                        </div>
+                    </div>
+                    <div class="award-content tab-content" id="tab-4">
+                        <div class="award-img">
+                            <img src="assets/images/award-img-3.png" alt="award-img">
+                        </div>
+                        <div class="award-text">
+                            <h5>Innovation in Design, 2020</h5>
+                            <p>Our groundbreaking campaign for UrbanBlend seamlessly combined digital, print, and
+                                experiential marketing, earning us top honors in this highly </p>
+                        </div>
+                    </div>
+                    <div class="award-content tab-content" id="tab-5">
+                        <div class="award-img">
+                            <img src="assets/images/award-img-4.png" alt="award-img">
+                        </div>
+                        <div class="award-text">
+                            <h5>Global Marketing, 2023</h5>
+                            <p>Our groundbreaking campaign for UrbanBlend seamlessly combined digital, print, and
+                                experiential marketing, earning us top honors in this highly </p>
+                        </div>
+                    </div>
+                    <div class="award-content tab-content" id="tab-6">
+                        <div class="award-img">
+                            <img src="assets/images/award-img-5.png" alt="award-img">
+                        </div>
+                        <div class="award-text">
+                            <h5>Brand Impact, 2021</h5>
+                            <p>Our groundbreaking campaign for UrbanBlend seamlessly combined digital, print, and
+                                experiential marketing, earning us top honors in this highly </p>
+                        </div>
+                    </div>
+                    <div class="award-content tab-content" id="tab-7">
+                        <div class="award-img">
+                            <img src="assets/images/award-img-6.png" alt="award-img">
+                        </div>
+                        <div class="award-text">
+                            <h5>Digital Creativity, 2022</h5>
+                            <p>Our groundbreaking campaign for UrbanBlend seamlessly combined digital, print, and
+                                experiential marketing, earning us top honors in this highly </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- award area end -->
+
     <!-- brand area start -->
     <section class="brand-area pb-120">
         <div class="container">
@@ -599,6 +723,163 @@
         </div>
     </section>
     <!-- brand area end -->
+
+    <!-- blog area start -->
+    <section class="blog-area pb-120">
+        <div class="container">
+            <div class="section-top">
+                <div class="row">
+                    <div class="col-lg-5">
+                        <h2>Our <span>Latest</span> ARTICLE</h2>
+                    </div>
+                    <div class="col-lg-6 offset-lg-1 align-self-end">
+                        <p>Our team of passionate designers and developers work tirelessly to bring your vision to life,
+                            crafting websites that are not only visually stunning but also intuitively functional.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-80">
+                <!-- Swiper -->
+                <div class="swiper blog-slider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="single-blog">
+                                <div class="blog-img">
+                                    <img src="assets/images/blog-img-1.png" alt="blog-img">
+                                </div>
+                                <div class="blog-contant">
+                                    <div class="blog-thumble mt-20">
+                                        <span>Technology</span>
+                                        <span>04 October, 2024</span>
+                                    </div>
+                                    <a href="#">
+                                        <h4 class="my-30">The Future of Technology, Trends to Watch in 2024</h4>
+                                    </a>
+                                    <a href="#" class="anchor-btn">
+                                        <span>Read More</span>
+                                        <img src="assets/images/arrow-vector-2.png" alt="arrow-vector"
+                                            class="arrow-vector-2">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="single-blog">
+                                <div class="blog-img">
+                                    <img src="assets/images/blog-img-2.png" alt="blog-img">
+                                </div>
+                                <div class="blog-contant">
+                                    <div class="blog-thumble mt-20">
+                                        <span>Time Management</span>
+                                        <span>03 March, 2024</span>
+                                    </div>
+                                    <a href="#">
+                                        <h4 class="my-30">10 Tips for Boosting Productivity in Your Daily Routine</h4>
+                                    </a>
+                                    <a href="#" class="anchor-btn">
+                                        <span>Read More</span>
+                                        <img src="assets/images/arrow-vector-2.png" alt="arrow-vector"
+                                            class="arrow-vector-2">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="single-blog">
+                                <div class="blog-img">
+                                    <img src="assets/images/blog-img-1.png" alt="blog-img">
+                                </div>
+                                <div class="blog-contant">
+                                    <div class="blog-thumble mt-20">
+                                        <span>Technology</span>
+                                        <span>04 October, 2024</span>
+                                    </div>
+                                    <a href="#">
+                                        <h4 class="my-30">The Future of Technology, Trends to Watch in 2024</h4>
+                                    </a>
+                                    <a href="#" class="anchor-btn">
+                                        <span>Read More</span>
+                                        <img src="assets/images/arrow-vector-2.png" alt="arrow-vector"
+                                            class="arrow-vector-2">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="single-blog">
+                                <div class="blog-img">
+                                    <img src="assets/images/blog-img-2.png" alt="blog-img">
+                                </div>
+                                <div class="blog-contant">
+                                    <div class="blog-thumble mt-20">
+                                        <span>Time Management</span>
+                                        <span>03 March, 2024</span>
+                                    </div>
+                                    <a href="#">
+                                        <h4 class="my-30">10 Tips for Boosting Productivity in Your Daily Routine</h4>
+                                    </a>
+                                    <a href="#" class="anchor-btn">
+                                        <span>Read More</span>
+                                        <img src="assets/images/arrow-vector-2.png" alt="arrow-vector"
+                                            class="arrow-vector-2">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="single-blog">
+                                <div class="blog-img">
+                                    <img src="assets/images/blog-img-1.png" alt="blog-img">
+                                </div>
+                                <div class="blog-contant">
+                                    <div class="blog-thumble mt-20">
+                                        <span>Technology</span>
+                                        <span>04 October, 2024</span>
+                                    </div>
+                                    <a href="#">
+                                        <h4 class="my-30">The Future of Technology, Trends to Watch in 2024</h4>
+                                    </a>
+                                    <a href="#" class="anchor-btn">
+                                        <span>Read More</span>
+                                        <img src="assets/images/arrow-vector-2.png" alt="arrow-vector"
+                                            class="arrow-vector-2">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="single-blog">
+                                <div class="blog-img">
+                                    <img src="assets/images/blog-img-2.png" alt="blog-img">
+                                </div>
+                                <div class="blog-contant">
+                                    <div class="blog-thumble mt-20">
+                                        <span>Time Management</span>
+                                        <span>03 March, 2024</span>
+                                    </div>
+                                    <a href="#">
+                                        <h4 class="my-30">10 Tips for Boosting Productivity in Your Daily Routine</h4>
+                                    </a>
+                                    <a href="#" class="anchor-btn">
+                                        <span>Read More</span>
+                                        <img src="assets/images/arrow-vector-2.png" alt="arrow-vector"
+                                            class="arrow-vector-2">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-next">
+                        <img src="assets/images/arrow-vector-3.png" alt="swiper-icon">
+                    </div>
+                    <div class="swiper-button-prev">
+                        <img src="assets/images/arrow-vector-3.png" alt="swiper-icon">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- blog area end -->
 
     <!-- contact area start -->
     <section class="contact-area pb-120">
@@ -657,6 +938,94 @@
         </div>
     </section>
     <!-- contact area end -->
+
+    <!-- footer area start -->
+    <footer class="footer-area pb-120">
+        <div class="container">
+            <div class="section-top">
+                <div class="row">
+                    <div class="col-lg-5">
+                        <h2>WORK WITH US</h2>
+                    </div>
+                    <div class="col-lg-6 offset-lg-1 align-self-end">
+                        <h2>info@rove.com</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-80">
+                <div class="col-lg-2">
+                    <div class="footer-links">
+                        <h5 class="mb-20">Useful Links</h5>
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Case Study</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">FAQ</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="footer-links">
+                        <h5 class="mb-20">Follow Us</h5>
+                        <ul>
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Twitter</a></li>
+                            <li><a href="#">LinkedIn</a></li>
+                            <li><a href="#">Instagram</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 offset-lg-1 p-0">
+                    <div class="footer-address">
+                        <h5>123 Maple Street, Springfield,IL 62701,United States </h5>
+                        <h5 class="">Get Fresh Updates! Subscribe </h5>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="col-lg-11 offset-lg-1">
+                        <h5>Your call is important to us
+                            (555) 555-5555</h5>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="form-input">
+                            <input type="email" placeholder="Enter Your Email" name="email">
+                            <a href="#"><img src="assets/images/arrow-vector-3.png" alt="footer-icon"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="marquee-area">
+            <div class="container-fluid">
+                <div class="marquee">
+                    <div class="marquee-text"><span>Let'</span><span> Create</span>
+                        <span>Something</span><span> amazing</span><span> Let'</span><span> Create</span>
+                        <span>Something</span><span> amazing</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright-area">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-bottom">
+                        <div>
+                            <span>Rove ©2024</span>
+                            <span>All Rights Reserved</span>
+                        </div>
+                        <div>
+                            <span>Local Time</span>
+                            <span>9:30 AM</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer area end -->
+
+    <!-- marquee area -->
+
 
     <!-- javascript files -->
     <script src="assets/js/jquery-2.2.4.min.js"></script>
